// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReadReceiptGroup > <ReadReceiptPerson /> > should display a tooltip 1`] = `
<div
  class="_tooltip"
  data-floating-ui-focusable=""
  id="react-use-id-1"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; max-width: 580px; transform: translate(5px, -6px);"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="_arrow"
    height="10"
    style="position: absolute; pointer-events: none; top: 100%; left: -1px;"
    viewBox="0 0 10 10"
    width="10"
  >
    <path
      d="M0,0 H10 L5,6 Q5,6 5,6 Z"
      stroke="none"
    />
    <clippath
      id="react-use-id-2"
    >
      <rect
        height="10"
        width="10"
        x="0"
        y="0"
      />
    </clippath>
  </svg>
  <span
    class="_clamp"
    id="react-use-id-3"
    style="--cpd-tooltip-max-lines: 2;"
  >
    Alice
  </span>
  <span
    class="_caption cpd-theme-dark"
    id="react-use-id-4"
  >
    @alice:example.org
  </span>
</div>
`;

exports[`ReadReceiptGroup > <ReadReceiptPerson /> > should fall back to userId if roomMember unspecified 1`] = `
<div>
  <span
    tabindex="0"
  >
    <div
      class="mx_AccessibleButton mx_ReadReceiptGroup_person"
      role="menuitem"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        aria-live="off"
        class="_avatar mx_BaseAvatar _avatar-imageless"
        data-color="3"
        data-testid="avatar-img"
        data-type="round"
        role="presentation"
        style="--cpd-avatar-size: 24px;"
      >
        a
      </span>
      <div
        class="mx_ReadReceiptGroup_name"
      >
        <p>
          @alice:example.org
        </p>
        <p
          class="mx_ReadReceiptGroup_secondary"
        >
          ==MOCK FORMATTED DATE==
        </p>
      </div>
    </div>
  </span>
</div>
`;

exports[`ReadReceiptGroup > <ReadReceiptPerson /> > should render 1`] = `
<div>
  <span
    tabindex="0"
  >
    <div
      class="mx_AccessibleButton mx_ReadReceiptGroup_person"
      role="menuitem"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        aria-label="Profile picture"
        aria-live="off"
        class="_avatar mx_BaseAvatar"
        data-color="3"
        data-testid="avatar-img"
        data-type="round"
        style="--cpd-avatar-size: 24px;"
      >
        <img
          alt=""
          class="_image"
          data-type="round"
          height="24px"
          loading="lazy"
          referrerpolicy="no-referrer"
          src="http://this.is.a.url//placekitten.com/400/400"
          width="24px"
        />
      </span>
      <div
        class="mx_ReadReceiptGroup_name"
      >
        <p>
          @alice:example.org
        </p>
        <p
          class="mx_ReadReceiptGroup_secondary"
        >
          ==MOCK FORMATTED DATE==
        </p>
      </div>
    </div>
  </span>
</div>
`;
